--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <div class="container-button">
-        <a href="quiz.html" target="_blank">Start</a>
+        <a href="quiz.html">Start</a>
     </div>
     <script src="index.js"></script>
 </body>
